# ir-remote

./: CMakeLists.txt  Makefile  README.md  partitions_custom.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig  app_console.c  app_device.c  app_driver.c  app_espnow.c  app_ir.c  app_web_server.c  device.c  idf_component.yml  ir-learn.c  ir_learn.c  ir_remote.c  main.c  register_cmd.c
main/include/: console.h  device.h  driver_config.h  espnow_config.h  ir_config.h  ir_learn.h  ir_remote.h  ir_storage.h  script_js.h  style_css.h  web_server.h
main/src/: app_console.c  device.c  ir.c  ir_learn.c  ir_remote.c  ir_storage.c  register_cmd.c
main/storage/: index.html  script.js  style.css
web/: CMakeLists.txt  index.html  index_html.h  script.js  style.css
